--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/jacket_pictures/
+    - assets/jackets_pictures/
     - assets/sneakers_pictures/
     # - images/a_dot_ham.jpeg
 
